objects/Travel_Request__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Travel Requests</relationshipLabel>
        <relationshipName>Travel_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Travel Requests (Contact)</relationshipLabel>
        <relationshipName>Travel_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Travel Requests</relationshipLabel>
        <relationshipName>Travel_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedCost__c</fullName>
        <label>EstimatedCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense</referenceTo>
        <relationshipLabel>Travel Requests</relationshipLabel>
        <relationshipName>Travel_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Travel Requests</relationshipLabel>
        <relationshipName>Travel_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip</label>
        <referenceTo>Trip__c</referenceTo>
        <relationshipLabel>Travel Requests</relationshipLabel>
        <relationshipName>Travel_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Travel Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Travel Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>